--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,7 +1,7 @@
-name: Manual Build and Release
+name: Manual Rust Build & Release
 
 permissions:
-  contents: write
+  contents: write   # required to create releases
 
 on:
   workflow_dispatch:
@@ -13,31 +13,35 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     outputs:
-      artifact-name: my-build
+      artifact-name: rust-exe
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build project
-        run: |
-          mkdir -p dist
-          echo "Hello world build $(date)" > dist/myapp.txt
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
 
-      - name: Upload build artifact
+      - name: Build Rust project (release)
+        run: cargo build --release
+
+      - name: Upload EXE artifact
         uses: actions/upload-artifact@v4
         with:
-          name: my-build
-          path: dist/
+          name: rust-exe
+          path: target/release/*.exe
 
   release:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Download build artifact
+      - name: Download EXE artifact
         uses: actions/download-artifact@v4
         with:
           name: ${{ needs.build.outputs.artifact-name }}
